common-applications/test-environment/openeuler-opendesign/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-opendesign
  name: openeuler-opendesign
