common-applications/test-environment/openeuler-opendesign/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opendesign
  namespace: openeuler-opendesign
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: opendesign
  template:
    metadata:
      labels:
        app: opendesign
    spec:
      imagePullSecrets:
        - name: huawei-swr-image-pull-secret
      containers:
      - name: websiteinfod
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/opendesign-test:241df476807c2bd419652f1d7cbc1e4c18445a44
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 1000m
            memory: 1000Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
