common-applications/test-environment/openeuler-opendesign/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendesign-service
  namespace: openeuler-opendesign
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: opendesign
  type: ClusterIP
