common-applications/test-environment/openeuler-opendesign/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: opendesign-ingress
  namespace: openeuler-opendesign
spec:
  tls:
    - hosts:
        - opendesign.test.osinfra.cn
      secretName: opendesign-tls
  rules:
    - host: opendesign.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: opendesign-service
              servicePort: 80
            path: /
